from enum import Enum;


class Component(Enum):
    C1 = "C1"
    C2 = "C2"
    C3 = "C3"
