from enum import Enum


class Product(Enum):
    P1 = "P1"
    P2 = "P2"
    P3 = "P3"
